fix: заменить ArrayList на LinkedList, добавить final static переменную