@@ -3,16 +3,18 @@ package service;
 import model.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> history = new ArrayList<>(10);
+    private final static int SIZE_OF_VIEWED_TASKS = 10;
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
-        if (history.size() >= 10) {
-            history.remove(0);
-            history.add(task);
+        if (history.size() >= SIZE_OF_VIEWED_TASKS) {
+            history.removeFirst();
+            history.addLast(task);
             return;
         }
         history.add(task);
